--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <img class='img-responsive center-block' src="/images/people/klab_chicago.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/klab_chicago_2.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/klab_chicago.jpg'" width="70%" height="70%" />
 
       <p>
-      <i>Motor learning.</i>
+      <i>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</i>
 
       <span style="display: block; margin-bottom: 1em"></span>
       Department of Organismic and Evolutionary Biology and Center for Brain Science at Harvard University<br>
@@ -18,8 +18,8 @@ layout: default
 
         <span style="display: block; margin-bottom: 3em"></span>
 
-      <a href="https://github.com/Olveczky-Lab"><i class="fa fa-github"></i> KordingLab</a>&nbsp;&nbsp;&nbsp;
-      <a href="mailto:kording@upenn.edu"><i class="fa fa-envelope-o"></i> kording@upenn.edu</a>
+      <a href="https://github.com/Olveczky-Lab"><i class="fa fa-github"></i> Ölveczky Lab</a>&nbsp;&nbsp;&nbsp;
+      <a href="mailto:olveczky@fas.harvard.edu"><i class="fa fa-envelope-o"></i> olveczky@fas.harvard.edu</a>
       </p>
     </header>
 </div>
