--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@ layout: default
       <img class='img-responsive center-block' src="/images/people/klab_chicago.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/klab_chicago_2.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/klab_chicago.jpg'" width="70%" height="70%" />
 
       <p>
-      <i>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</i>
+      We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.
 
       <span style="display: block; margin-bottom: 1em"></span>
-      Department of Organismic and Evolutionary Biology and Center for Brain Science at Harvard University<br>
+      Department of Organismic and Evolutionary Biology 
+      &
+      Center for Brain Science 
+      Harvard University<br>
+      Northwest Building
       52 Oxford St, Cambridge, MA, 02138
 
         <span style="display: block; margin-bottom: 3em"></span>
