--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <img class='img-responsive center-block' src="/images/people/klab_chicago.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/klab_chicago_2.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/klab_chicago.jpg'" width="70%" height="70%" />
 
       <p>
-      We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.
+      <b>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</b>
 
       <span style="display: block; margin-bottom: 1em"></span>
       Department of Organismic and Evolutionary Biology 
