--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ layout: default
       <b>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</b>
 
       <span style="display: block; margin-bottom: 1em"></span>
-      Department of Organismic and Evolutionary Biology 
-      &
-      Center for Brain Science 
+      Department of Organismic and Evolutionary Biology <br>
+      &<br>
+      Center for Brain Science <br>
       Harvard University<br>
       Northwest Building
       52 Oxford St, Cambridge, MA, 02138
