--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
       <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
         <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" />
       </div>
-      <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/klab_chicago_2.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/rat.jpg'" width="70%" height="70%" />
+      <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/rat.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/rhino_cup.jpg'" width="70%" height="70%" />
 
       <p>
       <b>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</b>
