--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class='container'>
     <header class="masthead text-center">
       <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
-        <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" />
+        <img class='img-responsive center-block' src="/images/people/rat.jpg" />
       </div>
       <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/rat.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/rhino_cup.jpg'" width="70%" height="70%" />
 
