--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
       <img class='img-responsive center-block' src="/images/people/rhino_cup.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/rat.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/rhino_cup.jpg'" width="70%" height="70%" />
 
       <p>
-      <b>We study the neural basis of motor skill learning. We also consume copious amounts of chocolate.</b>
+      <b>We study the neural basis of motor behavior</b>
 
       <span style="display: block; margin-bottom: 1em"></span>
       Department of Organismic and Evolutionary Biology <br>
