--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
       <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
         <img class='img-responsive center-block' src="/images/people/jump_lq.jpg" />
       </div>
+      <img class='img-responsive center-block' src="/images/people/jump_lq.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/jump_lq.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/jump_lq.jpg'" width="70%" height="70%" />
 
       <p>
       <b>We study the neural basis of motor behavior</b>
