--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ layout: default
 <div class='container'>
     <header class="masthead text-center">
       <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
-        <img class='img-responsive center-block' src="/images/people/jump_lq.jpg" />
+        <img class='img-responsive center-block' src="/images/people/jump_lq.gif" />
       </div>
-      <img class='img-responsive center-block' src="/images/people/jump_lq.jpg" width="70%" height="70%" onmouseover="this.src='/images/people/jump_lq.jpg'" width="70%" height="70%" onmouseout="this.src='/images/people/jump_lq.jpg'" width="70%" height="70%" />
+      <img class='img-responsive center-block' src="/images/people/jump_lq.gif" width="70%" height="70%" onmouseover="this.src='/images/people/jump_lq.gif'" width="70%" height="70%" onmouseout="this.src='/images/people/jump_lq.gif'" width="70%" height="70%" />
 
       <p>
       <b>We study the neural basis of motor behavior</b>
