--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@ layout: default
 
 <div class='container'>
     <header class="masthead text-center">
-      <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
-        <img class='img-responsive center-block' src="/images/people/jump_lq.gif" />
-      </div>
-      <img class='img-responsive center-block' src="/images/people/jump_lq.gif" width="70%" height="70%" onmouseover="this.src='/images/people/jump_lq.gif'" width="70%" height="70%" onmouseout="this.src='/images/people/jump_lq.gif'" width="70%" height="70%" />
-
+        <img src="/images/people/jump_lq.gif" />
+    
       <p>
       <b>We study the neural basis of motor behavior</b>
 
