--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
         <img src="/images/people/jump_lq.gif" />
     
       <p>
-      <b>We study the neural basis of complex behaviors using rats as our model</b>
+      <b>We study the neural basis of complex behaviors using the rat as our model</b>
 
       <span style="display: block; margin-bottom: 1em"></span>
       Department of Organismic and Evolutionary Biology <br>
